2001-08-06  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated.

2001-07-04  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new Automake release candidate 1.4h.

2001-06-28  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated with new version of Automake.

2001-05-07  Larry Jones  <larry.jones@sdrc.com>

	* diff3.c (diff3_run): Put the name of the output file in the error
	message instead of "could not open output file" to aid in debugging.

2001-04-25  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated using AM 1.4e as of today at 18:10 -0400.

2001-03-24  Noel Cragg  <noel@shave.red-bean.com>

	* diff.c: fix typo in usage string.

2001-03-20  Derek Price  <derek.price@openavenue.com>
	    for Karl Tomlinson  <k.tomlinson@auckland.ac.nz>

	* diff3.c (main): changed the common file of the two diffs to
	OLDFILE for merges and edscripts so that the diffs are more likely
	to contain the intended changes.  Not changing the horizon-lines
	arg for the second diff.  If the two diffs have the same parameters
	equal changes in each diff are more likely to appear the same.

	* analyze.c (shift_boundaries): undid Paul Eggert's patch to fix
	the diff3 merge bug described in ccvs/doc/DIFFUTILS-2.7-BUG.  The
	patch is no longer necessary now that diff3 does its differences
	differently.  I think the hunk merges provide a better indication
	of the area modified by the user now that the diffs are actually
	done between the appropriate revisions.

2001-03-15  Derek Price  <derek.price@openavenue.com>

	* Makefile.am (INCLUDES): Add -I$(top_srcdir)/lib for platforms which
	need the regex library there.

	* Makefile.in: Regenerated.

2001-03-14  Derek Price  <derek.price@openavenue.com>

	* .cvsignore: Added '.deps'.

	    Pavel Roskin  <proski@gnu.org>

	* Makefile.am: New file.
	* Makefile.in: Regenerated.

2001-02-22  Derek Price  <derek.price@openavenue.com>
	    Pavel Roskin  <proski@gnu.org>
