@@ -1,3 +1,4 @@
+$ set verify
 $ CC :== CC/DEBUG/NOOPTIMIZE/STANDARD=VAXC/DEFINE=HAVE_CONFIG_H-
 /INCLUDE_DIRECTORY=([-],[-.LIB],[-.SRC],[-.VMS])/PREFIX_LIBRARY_ENTRIES=ALL_ENTRIES
 $ CC diff.c
@@ -16,3 +17,4 @@ $ CC diff3.c
 $ library/create diff.olb diff.obj,analyze.obj,cmpbuf.obj,-
 dir.obj,io.obj,util.obj,context.obj,ed.obj,ifdef.obj,normal.obj,-
 side.obj,version.obj,diff3.obj
+$ set noverify
